--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.application.name=Java-Final-Project
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/FinalProjectDB
 spring.datasource.username=root
-spring.datasource.password=PCComputer45!
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+logging.level.org.hibernate=DEBUG
